@@ -147,6 +147,7 @@
 #define GDM_KEY_INDIRECT "xdmcp/HonorIndirect=false"
 #define GDM_KEY_MAXINDIR "xdmcp/MaxPendingIndirect=4"
 #define GDM_KEY_MAXINDWAIT "xdmcp/MaxWaitIndirect=30"
+#define GDM_KEY_PINGINTERVAL "xdmcp/PingInterval=5"
 
 #define GDM_KEY_GTKRC "gui/GtkRC=" EXPANDED_DATADIR "/themes/Default/gtk/gtkrc"
 #define GDM_KEY_ICONWIDTH "gui/MaxIconWidth=128"
