@@ -1177,6 +1177,19 @@
 	      </para>
 	    </listitem>
 	  </varlistentry>
+
+	  <varlistentry>
+	    <term>PingInterval</term>
+	    <listitem>
+	      <synopsis>PingInterval=5</synopsis>
+	      <para>
+		Interval in which to ping the X server in minutes.  If the
+		X server doesn't return before the next time we ping it,
+		the connection is stopped and the session ended.  This is
+		a combination of the xdm PingInterval and PingTimeout.
+	      </para>
+	    </listitem>
+	  </varlistentry>
 	</variablelist>
 	
       </sect2>
