@@ -167,6 +167,8 @@ gchar *s = N_("Maximum remote sessions: ");
 gchar *s = N_("Max pending indirect requests: ");
 gchar *s = N_("Maximum pending requests: ");
 gchar *s = N_("Listen on UDP port: ");
+gchar *s = N_("Ping interval (minutes):");
+gchar *s = N_("Interval in minutes in which to ping the server.  If the server doesn't respond in this many minutes (that is before the next time we ping it) the display will be terminated.");
 gchar *s = N_("XDMCP");
 gchar *s = N_("Server Definitions");
 gchar *s = N_("No.");
