@@ -1,3 +1,9 @@
+Wed May 30 16:19:39 2001  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.[ch], daemon/slave.c, gui/gdmconfig.(c|glade):
+	  Add a PingInterval xdmcp thingie which is a combination of
+	  the xdm PingInterval and PingTimeout.
+
 2001-05-30  Havoc Pennington  <hp@redhat.com>
 
 	* configure.in (ALL_LINGUAS): remove ja.po and zh_TW.Big5.po. 
